<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFF">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:text="@string/question_1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/answerButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionTextView"
        android:text="@string/option1_question1"/>

    <Button
        android:id="@+id/answerButton2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerButton1"
        android:layout_marginTop="16dp"
        android:text="@string/option2_question1"/>

    <Button
        android:id="@+id/answerButton3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerButton2"
        android:layout_marginTop="16dp"
        android:text="@string/option3_question1"/>

    <Button
        android:id="@+id/answerButton4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/answerButton3"
        android:layout_marginTop="16dp"
        android:text="@string/option4_question1"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/answerButton4"
        android:layout_marginTop="32dp"
        android:text="@string/submit"/>

</RelativeLayout>
