<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFF">

    <TextView
        android:id="@+id/congratulationsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"/>

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/congratulationsTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/takeNewQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreTextView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/take_new_quiz" />

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scoreTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/finish_quiz" />

</RelativeLayout>
